--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
     <header>
         <h1 style="position: absolute; top: 0; left: 50%; transform: translateX(-50%);">Welcome to YOUR Legacy</h1>
         <section>
-            <button>Sign In</button>
+            <button id="signInBtn">Sign In</button>
         </section>
         <nav>
 
@@ -56,7 +56,7 @@
         <h3>Featured</h3>
         <div>
             <button>
-                <iframe class="iframe1" src="https://archive.org/embed/Taylor_Swift_You_Belong_With_Me_" width="300" height="300"
+                <iframe id="iframe1"src="https://archive.org/embed/Taylor_Swift_You_Belong_With_Me_" width="300" height="300"
                     frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
                  
                     
