--- a/explore.html
+++ b/explore.html
@@ -23,7 +23,8 @@
         </header>
 
         <nav>
-            <button class="btn btn-outline-warning me-3 buttons">Home
+            <button class="btn btn-outline-warning me-3 buttons">
+                <a href="./homepage.html">Home</a>
             </button>
             <button class="btn btn-outline-warning me-3 buttons">
                 <a href="./explore.html">Explore</a>
@@ -40,34 +41,36 @@
             <section class="container">
                 <h1 class="row text-center">New Releases</h1>
             </section>
-            <div class="container p-5">
+            <div class="container">
                 <section class="row text-center m-3">
                     <article class="col">
-                        <div>
-                            <button class="m-3">New Release 1</button>
+                        <div class="m-3">
+                            <button class="p-5">New Release 1</button>
                         </div>
-                        <div>
-                            <button class="m-3">New Release 1</button>
-                        </div>
-                        <div>
-                            <button class="m-3">New Release 1</button>
+                        <div class="m-3">
+                            <button class="p-5">New Release 2</button>
                         </div>
                     </article>
                     <article class="col">
-                        <div>
-                            <button class="m-3">New Release 1</button>
+                        <div class="m-3">
+                            <button class="p-5">New Release 3</button>
                         </div>
-                        <div>
-                            <button class="m-3">New Release 1</button>
+                        <div class="m-3">
+                            <button class="p-5">New Release 4</button>
                         </div>
-                        <div>
-                            <button class="m-3">New Release 1</button>
+                    </article>
+                    <article class="col">
+                        <div class="m-3">
+                            <button class="p-5">New Release 5</button>
+                        </div>
+                        <div class="m-3">
+                            <button class="p-5">New Release 6</button>
                         </div>
                     </article>
                 </section>
             </div>
-            <div class="container p-5">
-                <section class="row text-center">
+            <div class="container">
+                <section class="row text-center m-3">
                     <article class="col">
                         <h1>Browse Artists</h1>
                             <div>
