more explore html restructuring

--- a/explore.html
+++ b/explore.html
@@ -73,38 +73,38 @@
                 <section class="row text-center m-3">
                     <article class="col">
                         <h1>Browse Artists</h1>
-                            <div>
-                                <h2>Artist 1</h2>
+                            <div class="m-3">
+                                <button class="p-5">Artist 1</button>
                             </div>
-                            <div>
-                                <h2>Artist 2</h2>
+                            <div class="m-3">
+                                <button class="p-5">Artist 2</button>
                             </div>
-                            <div>
-                                <h2>Artist 3</h2>
+                            <div class="m-3">
+                                <button class="p-5">Artist 3</button>
                             </div>
                     </article>
                     <article class="col">
                         <h1>Browse Genres</h1>
-                            <div>
-                                <h2>Genre 1</h2>
+                            <div class="m-3">
+                                <button class="p-5">Genre 1</button>
                             </div>
-                            <div>
-                                <h2>Genre 2</h2>
+                            <div class="m-3">
+                                <button class="p-5">Genre 2</button>
                             </div>
-                            <div>
-                                <h2>Genre 3</h2>
+                            <div class="m-3">
+                                <button class="p-5">Genre 3</button>
                             </div>
                     </article>
                     <article class="col">
                         <h1>Browse Songs</h1>
-                            <div>
-                                <h2>Song 1</h2>
+                            <div class="m-3">
+                                <button class="p-5">Song 1</button>
                             </div>
-                            <div>
-                                <h2>Song 2</h2>
+                            <div class="m-3">
+                                <button class="p-5">Song 2</button>
                             </div>
-                            <div>
-                                <h2>Song 3</h2>
+                            <div class="m-3">
+                                <button class="p-5">Song 3</button>
                             </div>
                     </article>
                 </section>
