--- a/homepage.html
+++ b/homepage.html
@@ -54,10 +54,27 @@
     </main>
     <footer class="footer">
         <h3>Featured</h3>
-        <div>
-           
-          
+        <div class="one" style="width: 200px; height: 200px;"> 
+            <img src="./images/20230124_1674560682-534.jpeg">
+            <ul>
+                <li>
+                    <a href="#Taylor Swift">Taylor Swift</a>
+                    <p>You Belong with Me</p>
+                </li>
+            </ul>
         </div>
+        <div class="two" style="width: 200px; height: 200px;">
+            <img src="images/Billie.jpg">
+            <ul>
+                <li>
+                    <a href="#Billie Eilish">Billie Eilish</a>
+                    <p> What was I Made For</p>
+                </li>
+            </ul>
+        </div>
+
+
+
     </footer>
 
     <script src="./js/script.js"></script>
