--- a/mohomepage.html
+++ b/mohomepage.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="css/mostyle.css">
+    <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="./css/playlist.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Legacy Playlist</title>
@@ -15,22 +15,20 @@
 
 
 <body>
-    <section>
-        <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
-    </section>
-
+ 
     <header>
         <h1>Legacy Playlist</h1>
         <h2>Welcome to YOUR Legacy</h2>
+        <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
     </header>
 
     <nav>
-        <button class="btn btn-outline-warning">Home</button>
+        <button class="btn btn-outline-warning me-3 buttons">Home</button>
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./explore.html">Explore</a>
         </button>
-        <button>
-            <a href="./playlist.html" class="btn btn-outline-warning me-3 buttons">My Music</a>
+        <button class="btn btn-outline-warning me-3 buttons">
+            <a href="./playlist.html">My Music</a>
         </button>
     </nav>
 
