--- a/playlist.html
+++ b/playlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    
+
     <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="./css/playlist.css">
     <link rel="stylesheet" href="css/style.css">
@@ -22,9 +22,9 @@
 
     <nav>
         <button class="btn btn-outline-warning me-3 buttons">
-            <a href="./index.html">Home</a>
+            <a href="./mohomepage.html">Home</a>
         </button>
-        <button class="btn btn-outline-warning me-3 buttons">
+        <button class="btn btn-outline-warning me-3 buttons stop">
             <a href="./explore.html">Explore</a>
         </button>
         <button class="btn btn-outline-warning me-3 buttons">My Music</button>
