--- a/explore.html
+++ b/explore.html
@@ -8,30 +8,32 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/resets.css">
         <link rel="stylesheet" href="./css/explore.css">
-        <link rel="stylesheet" href="./css/style.css">
+        <!-- <link rel="stylesheet" href="./css/style.css"> -->
     </head>
 
-    <body>
+    <body class="dark">
 
         <section>
-            <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
+            
         </section>
         
         <header>
-            <h1>Legacy Playlist</h1>
-            <h2>Welcome to YOUR Legacy</h2>
+            <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
+            <h1 class="center-text">Welcome to YOUR Legacy</h1>
         </header>
 
         <nav>
-            <button class="btn btn-outline-warning me-3 buttons">
-                <a href="./mohomepage.html">Home</a>
-            </button>
-            <button class="btn btn-outline-warning me-3 buttons">
-                <a href="./explore.html">Explore</a>
-            </button>
-            <button class="btn btn-outline-warning me-3 buttons">
-                <a href="./playlist.html">My Music</a>
-            </button>
+            <div class="navbar">
+                <button class="btn btn-outline-warning me-3 buttons">
+                   <a href="./mohomepage.html">Home</a>
+                </button>
+                <button class="btn btn-outline-warning me-3 buttons">
+                    <a href="./explore.html">Explore</a>
+                </button>
+                <button class="btn btn-outline-warning me-3 buttons">
+                    <a href="./playlist.html">My Music</a>
+                </button>
+            </div>
         </nav>
 
 
