--- a/playlist.html
+++ b/playlist.html
@@ -24,7 +24,7 @@
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./mohomepage.html">Home</a>
         </button>
-        <button class="btn btn-outline-warning me-3 buttons stop">
+        <button class="btn btn-outline-warning me-3 buttons">
             <a href="./explore.html">Explore</a>
         </button>
         <button class="btn btn-outline-warning me-3 buttons">My Music</button>
