--- a/explore.html
+++ b/explore.html
@@ -12,10 +12,6 @@
     </head>
 
     <body class="dark">
-
-        <section>
-            
-        </section>
         
         <header>
             <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
@@ -24,7 +20,7 @@
 
         <nav>
             <div class="navbar">
-                <button class="btn btn-outline-warning me-3 buttons">
+                <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">
                    <a href="./mohomepage.html">Home</a>
                 </button>
                 <button class="btn btn-outline-warning me-3 buttons">
