changes made to the playlist style

--- a/playlist.html
+++ b/playlist.html
@@ -48,14 +48,14 @@
           <label for="genre">Genre:</label>
           <input type="text" id="genre" required>
 
-          <button class="btn btn-outline-warning" type="submit">Add Song</button>
+          <button class="btn btn-outline-warning me-3 buttons" type="submit">Add Song</button>
         </form>
       </div>
     </div>
 
 
     <div class="d-grid gap-2 col-3 mx-auto">
-      <button id="open-modal-btn" class="btn btn-outline-warning btn-sm">Add a Song</button>
+      <button id="open-modal-btn" class="btn btn-outline-warning buttons btn-sm">Add a Song</button>
     </div>
 
     <section>
