--- a/explore.html
+++ b/explore.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Legacy Playlist</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/playlist.css">
         <link rel="stylesheet" href="./css/resets.css">
         <link rel="stylesheet" href="./css/explore.css">
         <!-- <link rel="stylesheet" href="./css/style.css"> -->
@@ -110,9 +111,9 @@
         </main>
 
         <script src="./js/city.js"></script>
-        <script src="./js/matt.js"></script>
         <script src="./js//oshea.js"></script>
         <script src="./js/razieh.js"></script>
         <script src="./js/script.js"></script>
+        <script src="./js/matt.js"></script>
     </body>
 </html>
