--- a/explore.html
+++ b/explore.html
@@ -1,119 +1,97 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Legacy Playlist</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./css/playlist.css">
-        <link rel="stylesheet" href="./css/resets.css">
-        <link rel="stylesheet" href="./css/explore.css">
-        <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    </head>
 
-    <body class="dark">
-        
-        <header>
-            <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
-            <h1 class="center-text">Welcome to YOUR Legacy</h1>
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Legacy Playlist</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/playlist.css">
+    <link rel="stylesheet" href="./css/resets.css">
+    <link rel="stylesheet" href="./css/explore.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+</head>
 
-        <nav>
-            <div class="navbar">
-                <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">
-                   <a href="./mohomepage.html">Home</a>
-                </button>
-                <button class="btn btn-outline-warning me-3 buttons">
-                    <a href="./explore.html">Explore</a>
-                </button>
-                <button class="btn btn-outline-warning me-3 buttons">
-                    <a href="./playlist.html">My Music</a>
-                </button>
+<body class="dark">
+
+    <header>
+        <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
+        <h1 class="center-text">Welcome to YOUR Legacy</h1>
+    </header>
+
+    <nav>
+        <div class="navbar">
+            <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">
+                <a href="./homep.html">Home</a>
+            </button>
+            <button class="btn btn-outline-warning me-3 buttons">
+                <a href="./explore.html">Explore</a>
+            </button>
+            <button class="btn btn-outline-warning me-3 buttons">
+                <a href="./playlist.html">My Music</a>
+            </button>
+        </div>
+    </nav>
+
+
+    <!-- This will hold the main contents of this page - including playlists, artists, albums, genres, and songs -->
+    <main class="explore-content">
+
+        <section class="container">
+            <h1 class="row text-center">Newly Added</h1>
+        </section>
+        <section id="newly-added" class="playlist-border">
+            <div id="songCardsContainer" class="d-flex flex-wrap">
             </div>
-        </nav>
-
-
-        <!-- This will hold the main contents of this page - including playlists, artists, albums, genres, and songs -->
-        <main class="explore-content">
-            
-            <section class="container">
-                <h1 class="row text-center">New Releases</h1>
+        </section>
+        <div id="browse-section"">
+            <section id="border-control" class="playlist-border text-center m-3">
+                <article class="col flex-wrap">
+                    <h1>Browse Artists</h1>
+                    <div class="m-3">
+                        <button class="p-5">Artist 1</button>
+                    </div>
+                    <div class="m-3">
+                        <button class="p-5">Artist 2</button>
+                    </div>
+                    <div class="m-3">
+                        <button class="p-5">Artist 3</button>
+                    </div>
+                </article>
+                <article class="col flex-wrap">
+                    <h1>Browse Genres</h1>
+                    <div class="m-3">
+                        <button class="p-5">Genre 1</button>
+                    </div>
+                    <div class="m-3">
+                        <button class="p-5">Genre 2</button>
+                    </div>
+                    <div class="m-3">
+                        <button class="p-5">Genre 3</button>
+                    </div>
+                </article>
+                <article class="col flex-wrap">
+                    <h1>Browse Songs</h1>
+                    <div class="m-3">
+                        <button class="p-5">Song 1</button>
+                    </div>
+                    <div class="m-3">
+                        <button class="p-5">Song 2</button>
+                    </div>
+                    <div class="m-3">
+                        <button class="p-5">Song 3</button>
+                    </div>
+                </article>
             </section>
-            <div class="container">
-                <section class="row text-center m-3">
-                    <article class="col">
-                        <div class="m-3">
-                            <button class="p-5">New Release 1</button>
-                        </div>
-                        <div class="m-3">
-                            <button class="p-5">New Release 2</button>
-                        </div>
-                    </article>
-                    <article class="col">
-                        <div class="m-3">
-                            <button class="p-5">New Release 3</button>
-                        </div>
-                        <div class="m-3">
-                            <button class="p-5">New Release 4</button>
-                        </div>
-                    </article>
-                    <article class="col">
-                        <div class="m-3">
-                            <button class="p-5">New Release 5</button>
-                        </div>
-                        <div class="m-3">
-                            <button class="p-5">New Release 6</button>
-                        </div>
-                    </article>
-                </section>
-            </div>
-            <div class="container">
-                <section class="row text-center m-3">
-                    <article class="col">
-                        <h1>Browse Artists</h1>
-                            <div class="m-3">
-                                <button class="p-5">Artist 1</button>
-                            </div>
-                            <div class="m-3">
-                                <button class="p-5">Artist 2</button>
-                            </div>
-                            <div class="m-3">
-                                <button class="p-5">Artist 3</button>
-                            </div>
-                    </article>
-                    <article class="col">
-                        <h1>Browse Genres</h1>
-                            <div class="m-3">
-                                <button class="p-5">Genre 1</button>
-                            </div>
-                            <div class="m-3">
-                                <button class="p-5">Genre 2</button>
-                            </div>
-                            <div class="m-3">
-                                <button class="p-5">Genre 3</button>
-                            </div>
-                    </article>
-                    <article class="col">
-                        <h1>Browse Songs</h1>
-                            <div class="m-3">
-                                <button class="p-5">Song 1</button>
-                            </div>
-                            <div class="m-3">
-                                <button class="p-5">Song 2</button>
-                            </div>
-                            <div class="m-3">
-                                <button class="p-5">Song 3</button>
-                            </div>
-                    </article>
-                </section>
-            </div>
-        </main>
+        </div>
+    </main>
 
-        <script src="./js/city.js"></script>
-        <script src="./js//oshea.js"></script>
-        <script src="./js/razieh.js"></script>
-        <script src="./js/script.js"></script>
-        <script src="./js/matt.js"></script>
-    </body>
+    <script src="./js/city.js"></script>
+    <script src="./js//oshea.js"></script>
+    <script src="./js/razieh.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/matt.js"></script>
+</body>
+
 </html>
