--- a/homep.html
+++ b/homep.html
@@ -16,11 +16,14 @@
             <button id="signInBtn">Sign In</button>
         </section>
         <nav>
-            <button class="btn btn-outline-warning me-3 buttons">Home
+            <button class="btn btn-outline-warning me-3 buttons">
+                <a href="./homep.html">Home</a>
             </button>
-            <button class="btn btn-outline-warning me-3 buttons">Explore
+            <button class="btn btn-outline-warning me-3 buttons">
+                <a href="./explore.html">Explore</a>
             </button>
-            <button class="btn btn-outline-warning me-3 buttons">My Music
+            <button class="btn btn-outline-warning me-3 buttons">
+                <a href="./playlist.html">My Music</a>
             </button>
         </nav>
     </header>
