--- a/playlist.html
+++ b/playlist.html
@@ -24,12 +24,14 @@
 
     <nav>
         <button class="btn btn-outline-warning me-3 buttons">
-            <a href="./index.html">Home</a>
+            <a href="./homep.html">Home</a>
         </button>
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./explore.html">Explore</a>
         </button>
-        <button class="btn btn-outline-warning me-3 buttons">My Music</button>
+        <button class="btn btn-outline-warning me-3 buttons">
+            <a href="./playlist.html">My Music</a>
+        </button>
     </nav>
 
     <main class="container-fluid">
@@ -63,7 +65,7 @@
 
             <div id="songCardsContainer" class="d-flex flex-wrap"></div>
 
-            
+            <button id="reset-btn" class="btn btn-danger position-absolute bottom-0 end-0 m-3">Reset Songs</button>
         </section>
         <!-- <h3>Songs (add music modal)</h3>
         <section class="row">
