styled the homepage to be more flush with the rest of the design

--- a/explore.html
+++ b/explore.html
@@ -38,7 +38,7 @@
 
 
     <!-- This will hold the main contents of this page - including playlists, artists, albums, genres, and songs -->
-    <main class="explore-content">
+    <main>
 
         <section class="container">
             <h2 class="row text-center">Newly Added</h2>
