--- a/playlist.html
+++ b/playlist.html
@@ -24,7 +24,7 @@
 
   <nav>
     <button class="btn btn-outline-warning me-3 buttons">
-      <a href="./mohomepage.html">Home</a>
+      <a href="./homep.html">Home</a>
     </button>
     <button class="btn btn-outline-warning me-3 buttons">
       <a href="./explore.html">Explore</a>
@@ -59,7 +59,7 @@
     </div>
 
     <section>
-      <h3>Songs</h3>
+      <h4>Songs</h4>
 
       <div id="songCardsContainer" class="d-flex flex-wrap"></div>
 
