Edited more of the dynamics of the color coding structure

--- a/homep.html
+++ b/homep.html
@@ -40,7 +40,7 @@
             </div>
         </section>
         <h3>Featured</h3>
-        <div class="featured-gallery-border">
+        <article id="border-control" class="playlist-border text-center m-3 new-flex">
 
             <div class="image-cover">
                 <img src="./images/billie_eilish_is_standing_in_front_of_brown_curtain_wearing_red_dress_with_orange_head_covered_jacket_hd_celebrities.jpg"
@@ -53,18 +53,7 @@
 
             </div>
 
-        </div>
-        <div id="name-container" class="name-container">
-            <div class="name">
-                <a href="song.html">What Was I Made for?</a>
-                <p>Billie Eilish</p>
-            </div>
-        </div>
-
-        <div class="name">
-            <a href="song.html">You Belong With Me</a>
-            <p>Taylor Swift</p>
-        </div>
+        </article>
 
     </main>
 
