--- a/explore.html
+++ b/explore.html
@@ -26,7 +26,7 @@
 
     <nav>
         <button class="btn btn-outline-warning me-3 buttons">
-            <a href="./homep.html">Home</a>
+            <a href="./index.html">Home</a>
         </button>
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./explore.html">Explore</a>
