--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css
-    ">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="./css/resets.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/homepage.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Legacy Playlist</title>
 </head>
+
 <body>
+    <section>
+        <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
+    </section>
+
     <header>
         <h1>Legacy Playlist</h1>
         <h2>Welcome to YOUR Legacy</h2>
     </header>
-
     <nav>
-        <button class="btn btn-outline-warning me-3 buttons">Home
+        <button class="btn btn-outline-warning me-3 buttons">
+            <a href="./index.html">Home</a>
         </button>
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./explore.html">Explore</a>
@@ -24,15 +31,36 @@
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./playlist.html">My Music</a>
         </button>
-        <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
     </nav>
+    <main>
 
+        <h2>Playlist</h2>
+        <section id="newly-added" class="playlist-border">
+            <div id="songCardsContainer" class="d-flex flex-wrap">
+            </div>
+        </section>
+        <h3>Featured</h3>
+        <article id="border-control" class="playlist-border text-center m-3 new-flex">
 
+            <div class="image-cover">
+                <img src="./images/billie_eilish_is_standing_in_front_of_brown_curtain_wearing_red_dress_with_orange_head_covered_jacket_hd_celebrities.jpg"
+                    alt="Image 1">
+
+            </div>
+
+            <div class="image-cover">
+                <img src="./images/20230124_1674560682-534.jpeg" alt="Image 2">
+
+            </div>
+
+        </article>
+
+    </main>
 
     <script src="./js/city.js"></script>
     <script src="./js/matt.js"></script>
-    <script src="./js//oshea.js"></script>
     <script src="./js/razieh.js"></script>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
