--- a/playlist.html
+++ b/playlist.html
@@ -2,70 +2,73 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="./css/resets.css">
-  <link rel="stylesheet" href="./css/playlist.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Legacy Playlist</title>
+    <link rel="stylesheet" href="./css/resets.css">
+    <link rel="stylesheet" href="./css/playlist.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Legacy Playlist</title>
 </head>
 
 <body>
-  <section>
-    <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
-  </section>
-
-  <header>
-    <h1>Legacy Playlist</h1>
-    <h2>Welcome to YOUR Legacy</h2>
-  </header>
-
-  <nav>
-    <button class="btn btn-outline-warning me-3 buttons">
-      <a href="./homep.html">Home</a>
-    </button>
-    <button class="btn btn-outline-warning me-3 buttons">
-      <a href="./explore.html">Explore</a>
-    </button>
-    <button class="btn btn-outline-warning me-3 buttons">My Music</button>
-  </nav>
-
-  <main class="container-fluid">
-
-    <div id="songModal" class="modal">
-      <div class="modal-content">
-        <span class="close-button">&times;</span>
-        <h2>Add a New Song</h2>
-        <form id="songForm">
-          <label for="songTitle">Song Title:</label>
-          <input type="text" id="songTitle" required>
-
-          <label for="artist">Artist:</label>
-          <input type="text" id="artist" required>
-
-          <label for="genre">Genre:</label>
-          <input type="text" id="genre" required>
-
-          <button class="btn btn-outline-warning me-3 buttons" type="submit">Add Song</button>
-        </form>
-      </div>
-    </div>
-
-
-    <div class="d-grid gap-2 col-3 mx-auto">
-      <button id="open-modal-btn" class="btn btn-outline-warning buttons btn-sm">Add a Song</button>
-    </div>
-
     <section>
-      <h4>Songs</h4>
-
-      <div id="songCardsContainer" class="d-flex flex-wrap"></div>
-
-      <button id="reset-btn" class="btn btn-danger position-absolute bottom-0 end-0 m-3">Reset Songs</button>
+        <button id="toggle-btn" class="btn btn-outline-warning me-3 buttons">Toggle Dark Mode</button>
     </section>
-    <!-- <h3>Songs (add music modal)</h3>
+
+    <header>
+        <h1>Legacy Playlist</h1>
+        <h2>Welcome to YOUR Legacy</h2>
+    </header>
+
+    <nav>
+        <button class="btn btn-outline-warning me-3 buttons">
+            <a href="./index.html">Home</a>
+        </button>
+        <button class="btn btn-outline-warning me-3 buttons">
+            <a href="./explore.html">Explore</a>
+        </button>
+        <button class="btn btn-outline-warning me-3 buttons">My Music</button>
+    </nav>
+
+    <main class="container-fluid">
+
+        <div id="songModal" class="modal">
+            <div class="modal-content">
+                <span class="close-button">&times;</span>
+                <h2>Add a New Song</h2>
+                <form id="songForm">
+                    <label for="image">Image:</label>
+                    <input type="text" id="imageLink" required>
+
+                    <label for="songTitle">Song Title:</label>
+                    <input type="text" id="songTitle" required>
+
+                    <label for="artist">Artist:</label>
+                    <input type="text" id="artist" required>
+
+                    <label for="genre">Genre:</label>
+                    <input type="text" id="genre" required>
+
+                    <button class="btn btn-outline-warning me-3 buttons" type="submit">Add Song</button>
+                </form>
+            </div>
+        </div>
+
+
+        <div class="d-grid gap-2 col-3 mx-auto">
+            <button id="open-modal-btn" class="btn btn-outline-warning buttons btn-sm">Add a Song</button>
+        </div>
+
+        <section>
+            <h4>Songs</h4>
+
+            <div id="songCardsContainer" class="d-flex flex-wrap"></div>
+
+            <button id="reset-btn" class="btn btn-danger position-absolute bottom-0 end-0 m-3">Reset Songs</button>
+        </section>
+        <!-- <h3>Songs (add music modal)</h3>
         <section class="row">
             <div class="col-1 card" style="width: 18rem;">
                 <img src="..." class="card-img-top" alt="...">
@@ -76,13 +79,13 @@
                 </div>
               </div>
         </section> -->
-  </main>
+    </main>
 
-  <script src="./js/city.js"></script>
-  <script src="./js//oshea.js"></script>
-  <script src="./js/razieh.js"></script>
-  <script src="./js/script.js"></script>
-  <!-- <script src="js/matt.js"></script> -->
+    <script src="./js/city.js"></script>
+    <script src="./js//oshea.js"></script>
+    <script src="./js/razieh.js"></script>
+    <script src="./js/script.js"></script>
+    <!-- <script src="js/matt.js"></script> -->
 </body>
 
 </html>
