--- a/explore.html
+++ b/explore.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    
+
     <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="./css/explore.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -26,10 +26,9 @@
 
     <nav>
         <button class="btn btn-outline-warning me-3 buttons">
-            <a href="./homep.html">Home</a>
+            <a href="./index.html">Home</a>
         </button>
-        <button class="btn btn-outline-warning me-3 buttons">
-            <a href="./explore.html">Explore</a>
+        <button class="btn btn-outline-warning me-3 buttons">Explore
         </button>
         <button class="btn btn-outline-warning me-3 buttons">
             <a href="./playlist.html">My Music</a>
@@ -47,43 +46,22 @@
             <div id="songCardsContainer" class="d-flex flex-wrap">
             </div>
         </section>
-        <div id="browse-section">
+        <div id="browse-section" class="new-flex">
             <section id="border-control" class="playlist-border text-center m-3">
                 <article class="col flex-wrap">
                     <h2>Browse Artists</h2>
                     <div class="m-3">
-                        <button class="p-5">Artist 1</button>
-                    </div>
-                    <div class="m-3">
-                        <button class="p-5">Artist 2</button>
-                    </div>
-                    <div class="m-3">
-                        <button class="p-5">Artist 3</button>
+                        <button class="p-5">Coming Soon</button>
                     </div>
                 </article>
                 <article class="col flex-wrap">
                     <h2>Browse Genres</h2>
                     <div class="m-3">
-                        <button class="p-5">Genre 1</button>
-                    </div>
-                    <div class="m-3">
-                        <button class="p-5">Genre 2</button>
-                    </div>
-                    <div class="m-3">
-                        <button class="p-5">Genre 3</button>
+                        <button class="p-5">Coming Soon</button>
                     </div>
                 </article>
                 <article class="col flex-wrap">
                     <h2>Browse Songs</h2>
-                    <div class="m-3">
-                        <button class="p-5">Song 1</button>
-                    </div>
-                    <div class="m-3">
-                        <button class="p-5">Song 2</button>
-                    </div>
-                    <div class="m-3">
-                        <button class="p-5">Song 3</button>
-                    </div>
                 </article>
             </section>
         </div>
