--- a/playlist.html
+++ b/playlist.html
@@ -24,12 +24,13 @@
 
   <nav>
     <button class="btn btn-outline-warning me-3 buttons">
-      <a href="./homep.html">Home</a>
+      <a href="./index.html">Home</a>
     </button>
     <button class="btn btn-outline-warning me-3 buttons">
       <a href="./explore.html">Explore</a>
     </button>
-    <button class="btn btn-outline-warning me-3 buttons">My Music</button>
+    <button class="btn btn-outline-warning me-3 buttons">My Music
+    </button>
   </nav>
 
   <main class="container-fluid">
