fixed layouts of explore html sections

--- a/explore.html
+++ b/explore.html
@@ -49,7 +49,7 @@
         </section>
         <div id="browse-section">
             <section id="border-control" class="playlist-border text-center m-3">
-                <article class="col flex-wrap">
+                <article class="col">
                     <h2>Browse Artists</h2>
                     <div class="m-3">
                         <button class="p-5">Artist 1</button>
@@ -61,7 +61,7 @@
                         <button class="p-5">Artist 3</button>
                     </div>
                 </article>
-                <article class="col flex-wrap">
+                <article class="col">
                     <h2>Browse Genres</h2>
                     <div class="m-3">
                         <button class="p-5">Genre 1</button>
@@ -73,7 +73,7 @@
                         <button class="p-5">Genre 3</button>
                     </div>
                 </article>
-                <article class="col flex-wrap">
+                <article class="col">
                     <h2>Browse Songs</h2>
                     <div class="m-3">
                         <button class="p-5">Song 1</button>
