--- a/explore.html
+++ b/explore.html
@@ -72,7 +72,7 @@
 
     <script src="./js/city.js"></script>
     <!-- <script src="./js//oshea.js"></script> -->
-    <script src="./js/razieh.js"></script>
+    <!-- <script src="./js/razieh.js"></script> -->
     <script src="./js/script.js"></script>
     <script src="./js/matt.js"></script>
 </body>
